src/custom.scss
@import "../node_modules/bootstrap/scss/functions";
@import "../node_modules/bootstrap/scss/variables";
@import "../node_modules/bootstrap/scss/mixins";

$primary: $gray-900;
$secondary: $gray-200;
$success: $green;
$info: $cyan-600;
$warning: $yellow-500;
$danger: $red;
$light: $white;
$dark: $black;
$primary-button: $blue;
$in-progress: $cyan-100;

$theme-colors: (
  "primary":    $primary,
  "secondary":  $secondary,
  "success":    $success,
  "info":       $info,
  "warning":    $warning,
  "danger":     $danger,
  "light":      $light,
  "dark":       $dark,
  "primary-button": $primary-button,
  "in-progress": $in-progress,
);

.navbar {
    height: 80px;
    border-bottom: 20px solid $primary;
}

.losing-team {
  color: $gray-500;
}

.power-play {
  font-size: 0.8rem;
  font-style: italic;
  color: $danger;
}

.state-scheduled {
  border-right: 4px solid $gray-400;
}

.state-inprogress {
  border-right: 4px solid $success;
}

.state-final {
  border-right: 4px solid $gray-600;
}

.state-powerplay {
  border-right: 4px solid $danger;
}

@import "../node_modules/bootstrap/scss/bootstrap";

